Fixed misaligned vote box

--- a/src/Classes/Article/Article.scss
+++ b/src/Classes/Article/Article.scss
@@ -28,7 +28,7 @@
       "vote image shortDesc"
       "vote image meta"
       "vote image footer"
-      "vote body body"
+      "body body body"
       "preview preview preview" !important;
     grid-template-columns: min-content min-content auto;
   }
@@ -39,6 +39,7 @@
 
   & > figure {
     margin: 0;
+    margin-right: 1rem;
     align-self: center;
     img {
       max-width: 220px;
